--- a/code/05_figures-and-correlations.rmd
+++ b/code/05_figures-and-correlations.rmd
@@ -82,8 +82,9 @@ ggplot(dat3, aes(x = tau, y = I2, group = effect, color = effect_type, linetype 
                                    expression(paste(italic(SMD))))) +
   coord_cartesian(ylim = c(0, 100)) +
   theme(legend.position = c(0.8, 0.4),
-        legend.background = element_rect(linetype = "solid", color = "black")) +
-  guides(color = guide_legend(override.aes = list(size = 1.2)))
+        legend.background = element_rect(linetype = "solid", color = "black"),
+        legend.key.width = unit(0.9, "cm")) +
+  guides(color = guide_legend(override.aes = list(size = 0.85)))
   
 
 # ggsave("../figures/tau-I2.png", dpi = 600, height =  4 , width = 6.47)
